<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="377dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Greeting"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joybutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:background="#ffd904"
        android:text="@string/Joy"
        android:onClick="Increment"
        app:layout_constraintBottom_toTopOf="@+id/lovebutton"
        app:layout_constraintEnd_toStartOf="@+id/sadnessbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/lovebutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorAccent"
        android:onClick="Increment"
        android:text="@string/Love"
        app:layout_constraintBottom_toTopOf="@+id/surprisebutton"
        app:layout_constraintEnd_toStartOf="@+id/angerbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joybutton" />

    <Button
        android:id="@+id/surprisebutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_green_light"
        android:onClick="Increment"
        android:text="@string/Surprise"
        app:layout_constraintBottom_toTopOf="@+id/browsebutton"
        app:layout_constraintEnd_toStartOf="@+id/fearbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lovebutton" />

    <Button
        android:id="@+id/sadnessbutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="Increment"
        android:text="@string/Sadness"
        app:layout_constraintBottom_toTopOf="@+id/angerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/joybutton"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/angerbutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimary"
        android:onClick="Increment"
        android:text="@string/Anger"
        app:layout_constraintBottom_toTopOf="@+id/fearbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lovebutton"
        app:layout_constraintTop_toBottomOf="@+id/sadnessbutton" />

    <Button
        android:id="@+id/fearbutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/darker_gray"
        android:onClick="Increment"
        android:text="@string/Fear"
        app:layout_constraintBottom_toTopOf="@+id/browsebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/surprisebutton"
        app:layout_constraintTop_toBottomOf="@+id/angerbutton" />

    <Button
        android:id="@+id/browsebutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="BrowseEmotions"
        android:text="@string/Browse_Past_Emotions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/joycount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/JoyCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lovebutton"
        app:layout_constraintEnd_toStartOf="@+id/sadnesscount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joybutton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sadnesscount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/SadnessCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/joycount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/joycount" />

    <TextView
        android:id="@+id/lovecount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/LoveCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/surprisebutton"
        app:layout_constraintEnd_toStartOf="@+id/angercount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lovebutton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/angercount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/AngerCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lovecount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lovecount" />

    <TextView
        android:id="@+id/surprisecount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SurpriseCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/fearcount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surprisebutton" />

    <TextView
        android:id="@+id/fearcount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/FearCount"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/surprisecount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/surprisecount" />



</android.support.constraint.ConstraintLayout>